// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`built-in themes (E8.1) > ggplot2: layout values snapshot 1`] = `
{
  "barLine": {
    "color": "rgb(237,237,237)",
    "width": 0.5,
  },
  "colorscaleStops": {
    "sequential": "2 stops [0,"rgb(20,44,66)"]…",
    "sequentialminus": "2 stops [0,"rgb(20,44,66)"]…",
  },
  "colorway": [
    "#F8766D",
    "#A3A500",
    "#00BF7D",
    "#00B0F6",
    "#E76BF3",
  ],
  "dataTypes": [
    "bar",
    "choropleth",
    "cone",
    "contour",
    "contourcarpet",
    "heatmap",
    "histogram",
    "histogram2d",
    "histogram2dcontour",
    "mesh3d",
    "parcoords",
    "pie",
    "scatter",
    "scatter3d",
    "scattercarpet",
    "scattergeo",
    "scattergl",
    "scattermapbox",
    "scatterpolar",
    "scatterpolargl",
    "scatterternary",
    "streamtube",
    "surface",
    "table",
  ],
  "font": {
    "color": "rgb(51,51,51)",
  },
  "layoutKeys": [
    "annotationdefaults",
    "coloraxis",
    "colorscale",
    "colorway",
    "font",
    "hoverlabel",
    "hovermode",
    "paper_bgcolor",
    "plot_bgcolor",
    "shapedefaults",
    "title",
    "xaxis",
    "yaxis",
  ],
  "paper_bgcolor": "white",
  "plot_bgcolor": "rgb(237,237,237)",
  "xaxis": {
    "gridcolor": "white",
    "linecolor": "white",
    "showgrid": true,
    "ticks": "outside",
    "zerolinecolor": "white",
  },
  "yaxis": {
    "gridcolor": "white",
    "showgrid": true,
  },
}
`;

exports[`built-in themes (E8.1) > gridon: layout values snapshot 1`] = `
{
  "barLine": undefined,
  "colorscaleStops": {},
  "colorway": undefined,
  "dataTypes": [],
  "font": undefined,
  "layoutKeys": [
    "xaxis",
    "yaxis",
  ],
  "paper_bgcolor": undefined,
  "plot_bgcolor": undefined,
  "xaxis": {
    "showgrid": true,
  },
  "yaxis": {
    "showgrid": true,
  },
}
`;

exports[`built-in themes (E8.1) > high-contrast: layout values snapshot 1`] = `
{
  "barLine": {
    "color": "#000000",
    "width": 1,
  },
  "colorscaleStops": {
    "diverging": "11 stops [0,"rgb(127,59,8)"]…",
    "sequential": "Cividis",
    "sequentialminus": "Cividis",
  },
  "colorway": [
    "#0057b8",
    "#c2410c",
    "#007a4d",
    "#9b1f8f",
    "#1a1a1a",
    "#b8860b",
    "#0e7c86",
    "#a3223a",
    "#5b3fc4",
    "#6b4e16",
  ],
  "dataTypes": [
    "bar",
    "choropleth",
    "cone",
    "contour",
    "contourcarpet",
    "heatmap",
    "histogram2d",
    "histogram2dcontour",
    "mesh3d",
    "parcoords",
    "scatter",
    "scatter3d",
    "scattercarpet",
    "scattergeo",
    "scattergl",
    "scattermapbox",
    "scatterpolar",
    "scatterpolargl",
    "scatterternary",
    "streamtube",
    "surface",
  ],
  "font": {
    "color": "#000000",
    "size": 14,
  },
  "layoutKeys": [
    "annotationdefaults",
    "coloraxis",
    "colorscale",
    "colorway",
    "font",
    "hoverlabel",
    "legend",
    "paper_bgcolor",
    "plot_bgcolor",
    "shapedefaults",
    "xaxis",
    "yaxis",
  ],
  "paper_bgcolor": "#ffffff",
  "plot_bgcolor": "#ffffff",
  "xaxis": {
    "color": "#000000",
    "gridcolor": "#bdbdbd",
    "showline": true,
    "ticks": "outside",
    "zerolinewidth": 1.5,
  },
  "yaxis": {
    "gridcolor": "#bdbdbd",
  },
}
`;

exports[`built-in themes (E8.1) > holochart: layout values snapshot 1`] = `
{
  "barLine": {
    "width": 0,
  },
  "colorscaleStops": {
    "diverging": "5 stops [0,"#6fe3ff"]…",
    "sequential": "5 stops [0,"#3a0ca3"]…",
    "sequentialminus": "5 stops [0,"#c8f7ff"]…",
  },
  "colorway": [
    "#ea2a37",
    "#5e74d5",
    "#9962c0",
    "#118e36",
    "#cc540a",
    "#128b8b",
    "#997600",
    "#b8267e",
  ],
  "dataTypes": [
    "bar",
    "pie",
    "scatter",
    "table",
  ],
  "font": {
    "color": "#a4a7b5",
    "family": "'Helvetica Neue', Helvetica, Arial, sans-serif",
    "size": 9,
  },
  "layoutKeys": [
    "annotationdefaults",
    "coloraxis",
    "colorscale",
    "colorway",
    "font",
    "hoverlabel",
    "legend",
    "margin",
    "modebar",
    "paper_bgcolor",
    "plot_bgcolor",
    "shapedefaults",
    "title",
    "xaxis",
    "yaxis",
  ],
  "paper_bgcolor": "#0a0a0f",
  "plot_bgcolor": "#0a0a0f",
  "xaxis": {
    "color": "#a4a7b5",
    "gridcolor": "#1a1a22",
    "linecolor": "#2c2c38",
    "showline": true,
    "ticks": "outside",
    "zerolinecolor": "#3e3e4c",
  },
  "yaxis": {
    "gridcolor": "#1a1a22",
  },
}
`;

exports[`built-in themes (E8.1) > holochart-dark: layout values snapshot 1`] = `
{
  "barLine": {
    "width": 0,
  },
  "colorscaleStops": {
    "diverging": "5 stops [0,"#6fe3ff"]…",
    "sequential": "5 stops [0,"#3a0ca3"]…",
    "sequentialminus": "5 stops [0,"#c8f7ff"]…",
  },
  "colorway": [
    "#ea2a37",
    "#5e74d5",
    "#9962c0",
    "#118e36",
    "#cc540a",
    "#128b8b",
    "#997600",
    "#b8267e",
  ],
  "dataTypes": [
    "bar",
    "pie",
    "scatter",
    "table",
  ],
  "font": {
    "color": "#a4a7b5",
    "family": "'Helvetica Neue', Helvetica, Arial, sans-serif",
    "size": 9,
  },
  "layoutKeys": [
    "annotationdefaults",
    "coloraxis",
    "colorscale",
    "colorway",
    "font",
    "hoverlabel",
    "legend",
    "margin",
    "modebar",
    "paper_bgcolor",
    "plot_bgcolor",
    "shapedefaults",
    "title",
    "xaxis",
    "yaxis",
  ],
  "paper_bgcolor": "#0a0a0f",
  "plot_bgcolor": "#0a0a0f",
  "xaxis": {
    "color": "#a4a7b5",
    "gridcolor": "#1a1a22",
    "linecolor": "#2c2c38",
    "showline": true,
    "ticks": "outside",
    "zerolinecolor": "#3e3e4c",
  },
  "yaxis": {
    "gridcolor": "#1a1a22",
  },
}
`;

exports[`built-in themes (E8.1) > neon: layout values snapshot 1`] = `
{
  "barLine": {
    "color": "rgba(255,255,255,0.85)",
    "width": 1,
  },
  "colorscaleStops": {
    "diverging": "3 stops [0,"#00f0ff"]…",
    "sequential": "5 stops [0,"#240046"]…",
    "sequentialminus": "3 stops [0,"#ffe600"]…",
  },
  "colorway": [
    "#00f0ff",
    "#ff2bd6",
    "#39ff14",
    "#ffe600",
    "#ff5f1f",
    "#b026ff",
    "#00ff9c",
    "#ff3860",
  ],
  "dataTypes": [
    "bar",
    "choropleth",
    "cone",
    "contour",
    "contourcarpet",
    "heatmap",
    "histogram2d",
    "histogram2dcontour",
    "mesh3d",
    "parcoords",
    "scatter",
    "scatter3d",
    "scattercarpet",
    "scattergeo",
    "scattergl",
    "scattermapbox",
    "scatterpolar",
    "scatterpolargl",
    "scatterternary",
    "streamtube",
    "surface",
  ],
  "font": {
    "color": "#e8e8ff",
  },
  "layoutKeys": [
    "annotationdefaults",
    "coloraxis",
    "colorscale",
    "colorscaleInterpolation",
    "colorway",
    "font",
    "hoverlabel",
    "legend",
    "paper_bgcolor",
    "plot_bgcolor",
    "shapedefaults",
    "title",
    "xaxis",
    "yaxis",
  ],
  "paper_bgcolor": "#07070f",
  "plot_bgcolor": "#0b0b1a",
  "xaxis": {
    "color": "rgba(0,240,255,0.55)",
    "gridcolor": "rgba(0,240,255,0.14)",
    "zerolinecolor": "rgba(255,43,214,0.6)",
    "zerolinewidth": 1.5,
  },
  "yaxis": {
    "gridcolor": "rgba(0,240,255,0.14)",
  },
}
`;

exports[`built-in themes (E8.1) > none: layout values snapshot 1`] = `
{
  "barLine": undefined,
  "colorscaleStops": {},
  "colorway": undefined,
  "dataTypes": [],
  "font": undefined,
  "layoutKeys": [],
  "paper_bgcolor": undefined,
  "plot_bgcolor": undefined,
  "xaxis": {},
  "yaxis": {},
}
`;

exports[`built-in themes (E8.1) > plotly: layout values snapshot 1`] = `
{
  "barLine": {
    "color": "#E5ECF6",
    "width": 0.5,
  },
  "colorscaleStops": {
    "diverging": "11 stops [0,"#8e0152"]…",
    "sequential": "10 stops [0,"#0d0887"]…",
    "sequentialminus": "10 stops [0,"#0d0887"]…",
  },
  "colorway": [
    "#636efa",
    "#EF553B",
    "#00cc96",
    "#ab63fa",
    "#FFA15A",
    "#19d3f3",
    "#FF6692",
    "#B6E880",
    "#FF97FF",
    "#FECB52",
  ],
  "dataTypes": [
    "bar",
    "choropleth",
    "cone",
    "contour",
    "contourcarpet",
    "heatmap",
    "histogram",
    "histogram2d",
    "histogram2dcontour",
    "mesh3d",
    "parcoords",
    "pie",
    "scatter",
    "scatter3d",
    "scattercarpet",
    "scattergeo",
    "scattergl",
    "scattermapbox",
    "scatterpolar",
    "scatterpolargl",
    "scatterternary",
    "streamtube",
    "surface",
    "table",
  ],
  "font": {
    "color": "#2a3f5f",
  },
  "layoutKeys": [
    "annotationdefaults",
    "coloraxis",
    "colorscale",
    "colorway",
    "font",
    "hoverlabel",
    "hovermode",
    "paper_bgcolor",
    "plot_bgcolor",
    "shapedefaults",
    "title",
    "xaxis",
    "yaxis",
  ],
  "paper_bgcolor": "white",
  "plot_bgcolor": "#E5ECF6",
  "xaxis": {
    "gridcolor": "white",
    "linecolor": "white",
    "ticks": "",
    "zerolinecolor": "white",
    "zerolinewidth": 2,
  },
  "yaxis": {
    "gridcolor": "white",
  },
}
`;

exports[`built-in themes (E8.1) > plotly_dark: layout values snapshot 1`] = `
{
  "barLine": {
    "color": "rgb(17,17,17)",
    "width": 0.5,
  },
  "colorscaleStops": {
    "diverging": "11 stops [0,"#8e0152"]…",
    "sequential": "10 stops [0,"#0d0887"]…",
    "sequentialminus": "10 stops [0,"#0d0887"]…",
  },
  "colorway": [
    "#636efa",
    "#EF553B",
    "#00cc96",
    "#ab63fa",
    "#FFA15A",
    "#19d3f3",
    "#FF6692",
    "#B6E880",
    "#FF97FF",
    "#FECB52",
  ],
  "dataTypes": [
    "bar",
    "choropleth",
    "cone",
    "contour",
    "contourcarpet",
    "heatmap",
    "histogram",
    "histogram2d",
    "histogram2dcontour",
    "mesh3d",
    "parcoords",
    "pie",
    "scatter",
    "scatter3d",
    "scattercarpet",
    "scattergeo",
    "scattergl",
    "scattermapbox",
    "scatterpolar",
    "scatterpolargl",
    "scatterternary",
    "streamtube",
    "surface",
    "table",
  ],
  "font": {
    "color": "#f2f5fa",
  },
  "layoutKeys": [
    "annotationdefaults",
    "coloraxis",
    "colorscale",
    "colorway",
    "font",
    "hoverlabel",
    "hovermode",
    "paper_bgcolor",
    "plot_bgcolor",
    "shapedefaults",
    "sliderdefaults",
    "title",
    "updatemenudefaults",
    "xaxis",
    "yaxis",
  ],
  "paper_bgcolor": "rgb(17,17,17)",
  "plot_bgcolor": "rgb(17,17,17)",
  "xaxis": {
    "gridcolor": "#283442",
    "linecolor": "#506784",
    "ticks": "",
    "zerolinecolor": "#283442",
    "zerolinewidth": 2,
  },
  "yaxis": {
    "gridcolor": "#283442",
  },
}
`;

exports[`built-in themes (E8.1) > plotly_white: layout values snapshot 1`] = `
{
  "barLine": {
    "color": "white",
    "width": 0.5,
  },
  "colorscaleStops": {
    "diverging": "11 stops [0,"#8e0152"]…",
    "sequential": "10 stops [0,"#0d0887"]…",
    "sequentialminus": "10 stops [0,"#0d0887"]…",
  },
  "colorway": [
    "#636efa",
    "#EF553B",
    "#00cc96",
    "#ab63fa",
    "#FFA15A",
    "#19d3f3",
    "#FF6692",
    "#B6E880",
    "#FF97FF",
    "#FECB52",
  ],
  "dataTypes": [
    "bar",
    "choropleth",
    "cone",
    "contour",
    "contourcarpet",
    "heatmap",
    "histogram",
    "histogram2d",
    "histogram2dcontour",
    "mesh3d",
    "parcoords",
    "pie",
    "scatter",
    "scatter3d",
    "scattercarpet",
    "scattergeo",
    "scattergl",
    "scattermapbox",
    "scatterpolar",
    "scatterpolargl",
    "scatterternary",
    "streamtube",
    "surface",
    "table",
  ],
  "font": {
    "color": "#2a3f5f",
  },
  "layoutKeys": [
    "annotationdefaults",
    "coloraxis",
    "colorscale",
    "colorway",
    "font",
    "hoverlabel",
    "hovermode",
    "paper_bgcolor",
    "plot_bgcolor",
    "shapedefaults",
    "title",
    "xaxis",
    "yaxis",
  ],
  "paper_bgcolor": "white",
  "plot_bgcolor": "white",
  "xaxis": {
    "gridcolor": "#EBF0F8",
    "linecolor": "#EBF0F8",
    "ticks": "",
    "zerolinecolor": "#EBF0F8",
    "zerolinewidth": 2,
  },
  "yaxis": {
    "gridcolor": "#EBF0F8",
  },
}
`;

exports[`built-in themes (E8.1) > plotly-classic: layout values snapshot 1`] = `
{
  "barLine": undefined,
  "colorscaleStops": {
    "diverging": "RdBu",
    "sequential": "Reds",
    "sequentialminus": "Blues",
  },
  "colorway": [
    "#1f77b4",
    "#ff7f0e",
    "#2ca02c",
    "#d62728",
    "#9467bd",
    "#8c564b",
    "#e377c2",
    "#7f7f7f",
    "#bcbd22",
    "#17becf",
  ],
  "dataTypes": [],
  "font": {
    "color": "#444",
    "family": ""Open Sans", verdana, arial, sans-serif",
    "size": 12,
  },
  "layoutKeys": [
    "colorscale",
    "colorway",
    "font",
    "paper_bgcolor",
    "plot_bgcolor",
    "xaxis",
    "yaxis",
  ],
  "paper_bgcolor": "#fff",
  "plot_bgcolor": "#fff",
  "xaxis": {
    "color": "#444",
    "gridcolor": "#eee",
  },
  "yaxis": {
    "gridcolor": "#eee",
  },
}
`;

exports[`built-in themes (E8.1) > presentation: layout values snapshot 1`] = `
{
  "barLine": undefined,
  "colorscaleStops": {},
  "colorway": undefined,
  "dataTypes": [
    "scatter",
    "scatter3d",
    "scattergl",
    "scatterpolar",
    "scatterternary",
    "table",
  ],
  "font": {
    "size": 18,
  },
  "layoutKeys": [
    "font",
    "xaxis",
    "yaxis",
  ],
  "paper_bgcolor": undefined,
  "plot_bgcolor": undefined,
  "xaxis": {},
  "yaxis": {},
}
`;

exports[`built-in themes (E8.1) > seaborn: layout values snapshot 1`] = `
{
  "barLine": {
    "color": "rgb(234,234,242)",
    "width": 0.5,
  },
  "colorscaleStops": {
    "sequential": "17 stops [0,"rgb(2,4,25)"]…",
    "sequentialminus": "17 stops [0,"rgb(2,4,25)"]…",
  },
  "colorway": [
    "rgb(76,114,176)",
    "rgb(221,132,82)",
    "rgb(85,168,104)",
    "rgb(196,78,82)",
    "rgb(129,114,179)",
    "rgb(147,120,96)",
    "rgb(218,139,195)",
    "rgb(140,140,140)",
    "rgb(204,185,116)",
    "rgb(100,181,205)",
  ],
  "dataTypes": [
    "bar",
    "choropleth",
    "cone",
    "contour",
    "contourcarpet",
    "heatmap",
    "histogram",
    "histogram2d",
    "histogram2dcontour",
    "mesh3d",
    "parcoords",
    "pie",
    "scatter",
    "scatter3d",
    "scattercarpet",
    "scattergeo",
    "scattergl",
    "scattermapbox",
    "scatterpolar",
    "scatterpolargl",
    "scatterternary",
    "streamtube",
    "surface",
    "table",
  ],
  "font": {
    "color": "rgb(36,36,36)",
  },
  "layoutKeys": [
    "annotationdefaults",
    "coloraxis",
    "colorscale",
    "colorway",
    "font",
    "hoverlabel",
    "hovermode",
    "paper_bgcolor",
    "plot_bgcolor",
    "shapedefaults",
    "title",
    "xaxis",
    "yaxis",
  ],
  "paper_bgcolor": "white",
  "plot_bgcolor": "rgb(234,234,242)",
  "xaxis": {
    "gridcolor": "white",
    "linecolor": "white",
    "showgrid": true,
    "ticks": "",
    "zerolinecolor": "white",
  },
  "yaxis": {
    "gridcolor": "white",
    "showgrid": true,
  },
}
`;

exports[`built-in themes (E8.1) > simple_white: layout values snapshot 1`] = `
{
  "barLine": {
    "color": "white",
    "width": 0.5,
  },
  "colorscaleStops": {
    "diverging": "11 stops [0,"rgb(103,0,31)"]…",
    "sequential": "10 stops [0,"#440154"]…",
    "sequentialminus": "10 stops [0,"#440154"]…",
  },
  "colorway": [
    "#1F77B4",
    "#FF7F0E",
    "#2CA02C",
    "#D62728",
    "#9467BD",
    "#8C564B",
    "#E377C2",
    "#7F7F7F",
    "#BCBD22",
    "#17BECF",
  ],
  "dataTypes": [
    "bar",
    "choropleth",
    "cone",
    "contour",
    "contourcarpet",
    "heatmap",
    "histogram",
    "histogram2d",
    "histogram2dcontour",
    "mesh3d",
    "parcoords",
    "pie",
    "scatter",
    "scatter3d",
    "scattercarpet",
    "scattergeo",
    "scattergl",
    "scattermapbox",
    "scatterpolar",
    "scatterpolargl",
    "scatterternary",
    "streamtube",
    "surface",
    "table",
  ],
  "font": {
    "color": "rgb(36,36,36)",
  },
  "layoutKeys": [
    "annotationdefaults",
    "coloraxis",
    "colorscale",
    "colorway",
    "font",
    "hoverlabel",
    "hovermode",
    "paper_bgcolor",
    "plot_bgcolor",
    "shapedefaults",
    "title",
    "xaxis",
    "yaxis",
  ],
  "paper_bgcolor": "white",
  "plot_bgcolor": "white",
  "xaxis": {
    "gridcolor": "rgb(232,232,232)",
    "linecolor": "rgb(36,36,36)",
    "showgrid": false,
    "showline": true,
    "ticks": "outside",
    "zeroline": false,
    "zerolinecolor": "rgb(36,36,36)",
  },
  "yaxis": {
    "gridcolor": "rgb(232,232,232)",
    "showgrid": false,
  },
}
`;

exports[`built-in themes (E8.1) > xgridoff: layout values snapshot 1`] = `
{
  "barLine": undefined,
  "colorscaleStops": {},
  "colorway": undefined,
  "dataTypes": [],
  "font": undefined,
  "layoutKeys": [
    "xaxis",
  ],
  "paper_bgcolor": undefined,
  "plot_bgcolor": undefined,
  "xaxis": {
    "showgrid": false,
  },
  "yaxis": {},
}
`;

exports[`built-in themes (E8.1) > ygridoff: layout values snapshot 1`] = `
{
  "barLine": undefined,
  "colorscaleStops": {},
  "colorway": undefined,
  "dataTypes": [],
  "font": undefined,
  "layoutKeys": [
    "yaxis",
  ],
  "paper_bgcolor": undefined,
  "plot_bgcolor": undefined,
  "xaxis": {},
  "yaxis": {
    "showgrid": false,
  },
}
`;
